# miriad

./: .gitignore  CMakeLists.txt  GNUmakedefs  GNUmakefile  INSTALL.html  Install,x  LICENSE  MacBinaryInstall.html  README,x  README.md  configure  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
cat/: askap.ant
guides/: ATLOD.html  Buildcheat  Buildhtmltask  Buildtasks  CMakeLists.txt  CVEL.html  GNUmakefile  PUTHEAD.html  SPLIT.html  TABED.html  VTESS.html  doc2html  index.html  tutorials.html
guides/prog/: CMakeLists.txt  GNUmakefile  progguide.tex
guides/user/: Buildtitlepage  CMakeLists.txt  GNUmakefile  biblio.inc  cook.inc  htmldefs.inc  iface.inc  imdisp.inc  immerge.g  mm.inc  mosaic.inc  pltvcon.inc  setup.inc  spanal.inc  spdisp.inc  userguide.tex  uvvars.inc
inc/: CMakeLists.txt  maxdim.h  maxdim.h.in  maxdimc.h  maxdimc.h.in  mirconst.h  rpfits.inc
inc/linux64/: maxdim.h  maxdimc.h
inc/prog/: CMakeLists.txt  blcal.h  calred.h.in  clplot.h  fits.h  imhist.h  psrbl.h  selfcal.h  tmcvt.h  uvsplit.h  velplot.h
inc/subs/: CMakeLists.txt  co.h  mostab.h  obspar.h  sysdep.h  version.h.in
linpack/: GNUmakefile
old/cat/: cmb.cfg,x
old/etc/: Nightly.linux,x  Nightly.linux64,x  Nightly.sun4sol,x  Weekly.sun4sol,x  crontab.crab,x
old/guides/: Buildchanges,x  getting.html,x
old/guides/user/: Buildhtml,x  README,x
old/prog/: imager.for,x  invert.h,x  invert3.for,x  pntgen3.for,x  psfmos.for,x  smdisp.for,x  uvcheck.for,x  uvjup.for,x  uvtriple.for,x  velse.for,x  xpeak.for,x
old/scripts/: doit.csh,x  mircadd.csh,x  mirclnk.csh,x  mirdif.csh,x  mirexport_no_id.csh,x  mirfix_newer.csh,x  mirinstall.csh,x  mirtar.csh,x  rci.csh,x
old/scripts/alpha/: fortran.csh,x  mircadd.csh,x  mirclnk.csh,x  mirimport.csh,x  mirlibs.csh,x  mirupdate.csh,x
old/scripts/convex/: fortran.csh,x  mircadd.csh,x  mirclnk.csh,x  mirimport.csh,x  mirlibs.csh,x  mirupdate.csh,x
old/scripts/cygwin/: fortran.csh,x  mircadd.csh,x  mirclnk.csh,x  mirupdate.csh,x
old/scripts/darwin_ppc/: Build_rpfits,x  mircadd.csh,x  mirclnk.csh,x  mirupdate.csh,x
old/scripts/dqo/: dqo_preview.csh,x
old/scripts/hpux/: fortran.csh,x  mircadd.csh,x  mirclnk.csh,x  mirlibs.csh,x  mirupdate.csh,x
old/scripts/i86sol/: mircadd.csh,x  mirclnk.csh,x  mirupdate.csh,x
old/scripts/irix/: fortran.csh,x  jdickey_update.csh,x  mircadd.csh,x  mirclnk.csh,x  mirfind.csh,x  mirupdate.csh,x
old/scripts/irix64/: fortran.csh,x  mircadd.csh,x  mirclnk.csh,x  mirfind.csh,x  mirlibs.csh,x  mirupdate.csh,x
old/scripts/linux/: mircadd.csh,x  mirclnk.csh,x  mirfind.csh,x  mirlibs.csh.rgooch,x  (+1 more)
old/scripts/linux-ia64/: fortran.csh,x  mircadd.csh,x  mirclnk.csh,x  mirupdate.csh,x
old/subs/: cleaner3.for,x  convlc.for,x  iscoords.for,x  mapper3.for,x
old/tools/: Build,x  mirnewer.c,x
patches/: pgplot531.patch
pgplot/: CMakeLists.txt
prog/: GNUmakefile  antpol.for  atfix.for  atlod.for  atrecal.for  atrecal.h  attsys.for  avmaths.for  blfit.h  blflag.for  calred.for  cclean.for  cgcurs.for  cgdisp.for  cgslice.for  cgspec.for  clean.for  clfind.for  closure.for  clplot.for  clstats.for  conterr.for  contsub.for  convol.for  demos.for  ellint.for  ellplt.for  fakeotf.for  fft.for  fits.for  fits.h  gaufit.for  gpaver.for  gpboot.for  gpcal.for  gpcopy.for  gpedit.for  gplist.for  gpplt.for  gpscal.for  (+108 more)
rpfits/: CMakeLists.txt
scripts/: CMakeLists.txt  GNUmakedefs.in  GNUmakefile  MIRRC.in  MIRRC.sh.in  README.postinstall.md  mirarch  mirexport  mirf  mirhelp  mirimport  mirsync  mirsysarch  mirtree  objstats  post_install.sh  veldop.py
scripts/alpha/: GNUmakedefs
scripts/convex/: GNUmakedefs
scripts/cygwin/: GNUmakedefs
scripts/darwin_ppc/: GNUmakedefs
scripts/darwin_x86/: GNUmakedefs
scripts/darwin_x86_64/: GNUmakedefs
scripts/hpux/: GNUmakedefs
scripts/i86sol/: GNUmakedefs
scripts/irix/: GNUmakedefs
scripts/irix64/: GNUmakedefs
scripts/linux/: GNUmakedefs
scripts/linux-ia64/: GNUmakedefs
scripts/linux64/: GNUmakedefs
scripts/sun4/: GNUmakedefs
scripts/sun4sol/: GNUmakedefs
scripts/unicos/: GNUmakedefs
scripts/web/: mirman.pl  mirsearch.pl
spec/bbcal/: GNUmakefile
spec/sxmtv/: GNUmakefile  colors.c  comm.c  cursor.c  image.c  screen.c  selectpt.c  sxmtv.c  sxmtv.h
spec/xmtv/: GNUmakefile  comm.c  xmtv.h  xmtv24.sh
spec/xpanel/: GNUmakefile  xpanel.c
specdoc/: CMakeLists.txt  GNUmakefile  confighist.doc  device.doc  miriad.doc  weatherdata.doc
src/: CMakeLists.txt
src/linpack/: CMakeLists.txt
src/prog/: CMakeLists.txt  atfix.for  atlod.for  atrecal.for  attsys.for  avmaths.for  blcal.for  blfit.for  blflag.for  calred.for  cclean.for  cgcurs.for  cgdisp.for  cgslice.for  cgspec.for  clean.for  clfind.for  closure.for  clplot.for  clstats.for  conterr.for  contsub.for  convol.for  demos.for  ellint.for  ellplt.for  fakeotf.for  fft.for  fits.for  gaufit.for  gethd.for  gpaver.for  gpboot.for  gpbreak.for  gpcal.for  gpcopy.for  gpedit.for  gpplt.for  gpscal.for  hanning.for  (+114 more)
src/subs/: CMakeLists.txt  angles.for  atjones.for  axistype.for  boxes.for  bsrch.for  bug.c  cgpgsubs.for  cgsubs.for  cnvl.for  co.for  cosubs.for  ephem.for  fftsubs.for  fitsio.for  getfreq.for  hdtab.for  headcopy.for  hio.c  hio3.f2c  mem.for  mm.f2c  model.for  mostab.for  nextpow2.for  noise.for  nswc.for  obspar.for  pb.for  pcvt.for  powell.for  string.for  title.for  uvgn.for  uvio.c  versan.for  wpfit.for  zed.for
subs/: GNUmakefile  atjones.for  axistype.for  boxes.for  bug.c  cgpgsubs.for  cgsubs.for  cnvl.for  co.for  co.h  cosubs.for  ephem.for  fftsubs.for  fitsio.for  gaupar.for  getfreq.for  hdtab.for  headcopy.for  hio.c  keyline.for  linetype.for  lsqfit.for  mapper.for  model.for  mostab.for  nllsqu.for  noise.for  nswc.for  obspar.for  pb.for  pcvt.for  powell.for  string.for  trnio.for  uvgn.for  uvio.c  versan.for  zed.for
tools/: CMakeLists.txt  GNUmakefile  detab.c  doc.c  doc2man.c  docfmt.c  ercmd.c  flint.c  intf2c.c  miriad.c  ratty.c  tpcp.c  tract.c  trim.c  varsizes.c  version.h.in
wcslib/: CMakeLists.txt
(+48 files in other folders)
